--- a/jcvidb/jcvidb_app/templates/search.html
+++ b/jcvidb/jcvidb_app/templates/search.html
@@ -12,6 +12,7 @@
    text-align: center;
     height:100px;
 }
+
 </style>
 </head>
 
@@ -44,6 +45,27 @@
 </table>
 
 
+
+
+<div class="pagination-container col-sm-12" style="margin-left:40%;" >
+    <div class="pagination">
+    <span class="step-links">
+        {% if  results.has_previous %}
+            <a href="?page=1&query={{ search_query }}">&laquo; </a>
+            <a href="?page={{ results.previous_page_number }}&query={{ search_query }}"> &#8249; prev </a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ results.number }} of {{ results.paginator.num_pages }}
+        </span>
+
+        {% if results.has_next %}
+            <a href="?page={{ results.next_page_number }}&query={{ search_query }}">next &#8250;</a>
+            <a href="?page={{ results.paginator.num_pages }}&query={{ search_query }}"> &raquo;</a>
+        {% endif %}
+    </span>
+</div>
+</div>
 
 <div class="footer"  >
 
