--- a/jcvidb/jcvidb_app/templates/common/header.html
+++ b/jcvidb/jcvidb_app/templates/common/header.html
@@ -23,7 +23,7 @@
     <div class="col-sm-4"></div>
     <div class="col-sm-8">
           <form class="form-inline" method="get"  action=  '/search/'   >
-            {% csrf_token %}
+
       <div class="form-group row" style="width: 50%;">
         <input type="text" class="form-control" id="PGAN" name="PGAN_name">
       </div>
@@ -36,9 +36,11 @@
   </div>
 </div>
 
-
-{% block content %}
+<div class="col-sm-12">
+  {% block content %}
 {% endblock %}
+
+</div>
 </body>
 
 </html>
