--- a/jcvidb/jcvidb_app/templates/common/header.html
+++ b/jcvidb/jcvidb_app/templates/common/header.html
@@ -30,8 +30,8 @@
             Sign-in/up <span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
-            <li><a href="./sign_in">Sign-in</a></li>
-            <li><a href="./registration">Sign-up</a></li>
+            <li><a href="/sign_in">Sign-in</a></li>
+            <li><a href="/registration">Sign-up</a></li>
           </ul>
         </div>
       </div>
