--- a/jcvidb/jcvidb_app/templates/sign_in.html
+++ b/jcvidb/jcvidb_app/templates/sign_in.html
@@ -1,22 +1,33 @@
-<div class="container">
-  <div class="row justify-content-center mt-5">
+{% extends "./common/header.html" %}
+
+{% block content %}
+
+<div class="container mt-5">
+  <div class="row justify-content-center">
     <div class="col-md-6">
-      <form>
-        <div class="form-group">
-          <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title text-center">Sign In</h5>
+          <form autocomplete="off" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+              <label for="email">Email address</label>
+              <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Enter email" value="example@mail.com">
+<!--              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
+            </div>
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+            </div>
+            <div class="form-check mb-3">
+              <input type="checkbox" class="form-check-input" id="remember">
+              <label class="form-check-label" for="remember">Remember me</label>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+          </form>
         </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="Password">
-        </div>
-        <div class="form-check mb-3">
-          <input type="checkbox" class="form-check-input" id="remember">
-          <label class="form-check-label" for="remember">Remember me</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Sign in</button>
-      </form>
+      </div>
     </div>
   </div>
 </div>
+{% endblock %}
