--- a/jcvidb/jcvidb_app/templates/prot_postform.html
+++ b/jcvidb/jcvidb_app/templates/prot_postform.html
@@ -45,7 +45,7 @@
                         </div>
                         <div class="form-group">
                             <label for="id_attachment">attachment:</label><br>
-                             <input class="form-control" type="file" id="id_attachment" name="attachment">
+                             <input class="form-control" type="file" id="id_attachment" name="attachment" required>
                         </div>
 
                         <button type="submit" id="submitButton" class="btn btn-primary">Register</button>
