--- a/jcvidb/jcvidb_app/templates/update_prot.html
+++ b/jcvidb/jcvidb_app/templates/update_prot.html
@@ -11,7 +11,7 @@
     <hr>
 
     <div class="container" style="margin: 5%;">
-        <form class="form-horizontal" ]>
+        <form class="form-horizontal" >
             <div class="form-group row">
                 <label class="control-label col-sm-2" for="email"><b>Free Gene Set:</b></label>
                 <div class="col-sm-10">
@@ -21,6 +21,7 @@
             <div class="form-group row">
                 <label class="control-label col-sm-2" for="pwd"><b>PGAN:</b></label>
                 <div class="col-sm-10">
+<!--                    <input class="col-sm-10" name="PGAN" id="id_PGAN" value="{{prot_data.PGAN}}">-->
                     <label class="col-sm-10">{{prot_data.PGAN}}</label>
                 </div>
             </div>
@@ -57,15 +58,24 @@
                 </div>
             </div>
 
-<!--            {% if login_context.id and login_context.admin %}-->
-<!--            <div class="form-group row">-->
-<!--                <div class="col-sm-5">-->
-<!--                </div>-->
-<!--                <div class="col-sm-7">-->
-<!--                    <button type="submit" id="submitButton" class="btn btn-success">Approve</button>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            {% endif %}-->
+
+            <div class="form-group row">
+                <label class="control-label col-sm-2" for="email"><b>Attachment</b></label>
+                <div class="col-sm-10">
+<!--                    <label class="col-sm-10" ><a href="../download/" {{prot_data.attachment}} > {{prot_data.attachment}}</a> </label>-->
+                    <label class="col-sm-10" ><a href="{% url 'download_file' file_name=prot_data.attachment %}">  {{prot_data.attachment}}</a> </label>
+                </div>
+            </div>
+
+            {% if login_context.id and login_context.admin %}
+            <div class="form-group row">
+                <div class="col-sm-5">
+                </div>
+                <div class="col-sm-7">
+                    <button type="submit" id="submitButton" class="btn btn-success">Approve</button>
+                </div>
+            </div>
+            {% endif %}
 
         </form>
     </div>
