--- a/jcvidb/jcvidb_app/templates/prot_postform.html
+++ b/jcvidb/jcvidb_app/templates/prot_postform.html
@@ -40,8 +40,8 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="id_locus_tag">Locus Tag:</label><br>
-                            <input class="form-control" type="text"   id="id_locus_tag"   name="locus_tag" required><br>
+                            <label for="id_locusTag">Locus Tag:</label><br>
+                            <input class="form-control" type="text"   id="id_locusTag"   name="locusTag" required><br>
                         </div>
                         <div class="form-group">
                             <label for="id_attachment">attachment:</label><br>
