--- a/jcvidb/jcvidb_app/templates/details.html
+++ b/jcvidb/jcvidb_app/templates/details.html
@@ -56,6 +56,17 @@
                     <label class="col-sm-10">{{prot_data.creationDate}}</label>
                 </div>
             </div>
+            <div class="form-group row">
+                <label class="control-label col-sm-2" for="email"><b>Attachment</b></label>
+                <div class="col-sm-10">
+
+                    {% if prot_data.attachment %}
+                    <label class="col-sm-10" ><a href="{% url 'download_file' file_name=prot_data.attachment %}">  {{prot_data.attachment}}</a> </label>
+                    {% else %}
+                    <p>No file available for download.</p>
+                    {% endif %}
+                </div>
+            </div>
 
 <!--            {% if login_context.id and login_context.admin %}-->
 <!--            <div class="form-group row">-->
