--- a/jcvidb/jcvidb_app/templates/update_prot.html
+++ b/jcvidb/jcvidb_app/templates/update_prot.html
@@ -5,13 +5,14 @@
 
 <div class="col-sm-12 ">
     <div class="text-center">
-            <h1 > Details</h1>
+            <h1 > Do you want to approve ?</h1>
 
     </div>
     <hr>
 
     <div class="container" style="margin: 5%;">
-        <form class="form-horizontal" >
+        <form class="form-horizontal" method="post" >
+             {% csrf_token %}
             <div class="form-group row">
                 <label class="control-label col-sm-2" for="email"><b>Free Gene Set:</b></label>
                 <div class="col-sm-10">
@@ -63,11 +64,15 @@
                 <label class="control-label col-sm-2" for="email"><b>Attachment</b></label>
                 <div class="col-sm-10">
 <!--                    <label class="col-sm-10" ><a href="../download/" {{prot_data.attachment}} > {{prot_data.attachment}}</a> </label>-->
+                    {% if prot_data.attachment %}
                     <label class="col-sm-10" ><a href="{% url 'download_file' file_name=prot_data.attachment %}">  {{prot_data.attachment}}</a> </label>
+                    {% else %}
+                    <p>No file available for download.</p>
+                    {% endif %}
                 </div>
             </div>
 
-            {% if login_context.id and login_context.admin %}
+            {% if login_context.id and login_context.admin  %}
             <div class="form-group row">
                 <div class="col-sm-5">
                 </div>
