--- a/jcvidb/jcvidb_app/templates/main.html
+++ b/jcvidb/jcvidb_app/templates/main.html
@@ -50,14 +50,12 @@
         </tr>
       </thead>
   <tbody>
-
-
     {% for x in aProteomics_data %}
     <tr>
           <td><a href="details/{{ x.id }}">{{ x.id }}</a></td>
-          <td><textarea rows="5" cols="30" readonly style="border:0px;">{{ x.details }}</textarea> </td>
+          <td><textarea rows="2" cols="30" readonly style="border:0px;width: 100%;">{{ x.details }}</textarea> </td>
           <td>{{ x.type.name }}</td>
-          </tr>
+    </tr>
     {% endfor %}
     </tr>
   </tbody>
