--- a/jcvidb/jcvidb_app/templates/file_upload.html
+++ b/jcvidb/jcvidb_app/templates/file_upload.html
@@ -11,11 +11,11 @@
 
 {% endfor %}
 
-<h1 class="text-center"  > Post Details</h1>
+<h1 class="text-center"  > File Upload</h1>
 <hr>
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-md-8">
+        <div class="col-md-10">
             <div class="card">
                 <div class="card-body">
                     <form method="post" class="form-container" enctype="multipart/form-data"  >
@@ -45,10 +45,10 @@
                         </div>
 
 
-<!--                        <div class="form-group">-->
-<!--                            <label for="id_attachment">attachment:</label><br>-->
-<!--                             <input class="form-control" type="file" id="id_attachment" name="attachment" >-->
-<!--                        </div>-->
+                        <div class="form-group">
+                            <label for="id_attachment">attachment:</label><br>
+                             <input class="form-control" type="file" id="id_attachment" name="attachment" required>
+                        </div>
 
                         <button type="submit" id="submitButton" class="btn btn-primary">Register</button>
                         <input type="text" id="id_createdBy" hidden="true" name="createdBy" value="{{ login_context.id }}">
