--- a/jcvidb/jcvidb_app/templates/common/header.html
+++ b/jcvidb/jcvidb_app/templates/common/header.html
@@ -8,6 +8,14 @@
 {% load bootstrap_icons %}
     <meta charset="UTF-8">
     <title>JCVIDB</title>
+      <style>
+        /* Style for the scrollable div */
+        .scrollable-div {
+         /* Set the width of the scrollable div */
+            height: 200px; /* Set the height of the scrollable div */
+            overflow-y: auto; /* Make the div vertically scrollable */
+        }
+    </style>
 </head>
 
 
