modal feature done

--- a/jcvidb/jcvidb_app/templates/file_upload.html
+++ b/jcvidb/jcvidb_app/templates/file_upload.html
@@ -27,12 +27,21 @@
                         <br>
 
                         <br>
-                     <div>
-                           <h3> Add Column Informations (only for excel,csv or sheets) </h3>
-                           <input class="control" type="number" id="sheet_index" name="sheet_index">
-                           <input class="control" type="number" id="col_index" name ="col_index">
-                           <input type="buton" value="Preview Headers" class="btn btn-info" readonly onclick="handleFile(document.getElementById('attachment'))">
-                       </div>
+                        <div class="text-center">
+                                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+  Add Column Informations (only for excel,csv or sheets)
+  </button>
+                            <br>
+                            <br>
+                            <div class="collapse" id="collapseExample">
+
+                                <input class="control" type="number" id="sheet_index" name="sheet_index">
+                                <input class="control" type="number" id="col_index" name ="col_index">
+                                <input type="buton" value="Preview Headers" class="btn btn-info" readonly onclick="handleFile(document.getElementById('attachment'))">
+                            </div>
+                        </div>
+
+
 
 
                     <div class="scrollable-div" name="previewHeaders" id="previewHeaders"></div>
@@ -47,6 +56,27 @@
             </div>
         </div>
     </div>
+</div>
+
+<p>{{added}}</p>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Note</h5>
+        <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Would you like to proceed to add another file?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">yes</button>
+        <button type="button" class="btn btn-primary" id="pageBLink">No</button>
+      </div>
+    </div>
+  </div>
 </div>
 
 <script>
@@ -96,10 +126,10 @@
              headers.forEach(function (header) {
                  var checkbox = document.createElement('input');
                  checkbox.setAttribute('type', 'checkbox');
-                 checkbox.setAttribute('id', 'checkbox_' + header.trim().replace(/\s+/g, '_')); // Create unique ID for each checkbox
-                 checkbox.setAttribute('name', 'checkbox_' + header.trim().replace(/\s+/g, '_')); // Create unique name for each checkbox
+                 checkbox.setAttribute('id', 'checkbox_' + header.trim()); // Create unique ID for each checkbox
+                 checkbox.setAttribute('name', 'checkbox_' + header.trim()); // Create unique name for each checkbox
                  var label = document.createElement('label');
-                 label.setAttribute('for', 'checkbox_' + header.trim().replace(/\s+/g, '_')); // Set 'for' attribute to match checkbox ID
+                 label.setAttribute('for', 'checkbox_' + header.trim()); // Set 'for' attribute to match checkbox ID
                  label.textContent = header.trim();
 
                  // Add checkbox and label to the preview div
@@ -108,6 +138,16 @@
                  previewDiv.appendChild(document.createElement('br')); // Add line break
              });
          }
+
+  document.getElementById('pageBLink').addEventListener('click', function() {
+    window.location.href = "../";
+  });
+var condition = {{added|lower }}; // Replace 'condition_from_django' with your variable name
+
+// If the condition is true, show the modal
+if (condition) {
+$('#exampleModal').modal('show');
+}
 </script>
 <body>
 {% endblock %}
