--- a/jcvidb/jcvidb_app/templates/common/header.html
+++ b/jcvidb/jcvidb_app/templates/common/header.html
@@ -15,6 +15,9 @@
             height: 200px; /* Set the height of the scrollable div */
             overflow-y: auto; /* Make the div vertically scrollable */
         }
+        .table-responsive {
+              max-height:300px;
+          }
     </style>
 </head>
 
