--- a/jcvidb/jcvidb_app/templates/details.html
+++ b/jcvidb/jcvidb_app/templates/details.html
@@ -49,7 +49,7 @@
 
             <br>
             {% if  prot_data.file_array|length > 0 %}
-            <h4>Attachment</h4>
+            <h4>Attachments</h4>
             {% endif %}
 
             {% for x in prot_data.file_array %}
