--- a/jcvidb/jcvidb_app/templates/update_prot.html
+++ b/jcvidb/jcvidb_app/templates/update_prot.html
@@ -46,17 +46,53 @@
                     <label class="col-sm-10" id="id_cd">{{prot_data.creationDate}}</label>
                 </div>
             </div>
-            <div class="form-group row">
-                <label class="control-label col-sm-2" for="id_attachment"><b>Attachment</b></label>
-                <div class="col-sm-10">
 
-                    {% if prot_data.attachment %}
-                    <label id ="id_attachment" class="col-sm-10" ><a href="{% url 'download_file' file_name=prot_data.attachment %}">  {{prot_data.attachment}}</a> </label>
+                        <br>
+            {% if  prot_data.file_array|length > 0 %}
+            <h4>Attachments</h4>
+            {% endif %}
+
+            {% for x in prot_data.file_array %}
+            <div class="form-group row">
+
+                <div class="col-sm-10">
+                    <label class="control-label col-sm-2" for="id_attachment"><li>Attachment</li></label>
+                    {% if x.file_ %}
+                    <label id ="id_attachment" class="col-sm-8" ><a href="{% url 'download_file' file_name=x.file_ %}">  {{ x.file_ }}</a> </label>
                     {% else %}
                     <p>No file available for download.</p>
                     {% endif %}
                 </div>
+                 <div class="modal-body">
+                    <div class="panel panel-default">
+                        <div class="panel-body table-responsive">
+                            <table class="table table-bordered" id={{x.id}}>
+                               {% if  x.display_data|length > 0 %}
+                                <h4> File Info</h4>
+                                {% endif %}
+                               {% for tb in x.display_data %}
+
+                                <tbody>
+
+                                    <tr>
+                                        {% for i in tb %}
+
+
+                                            <td>{{ i }}</td>
+
+                                        {% endfor %}
+                                    </tr>
+                                </tbody>
+                                {% endfor %}
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
+            {% endfor %}
+
+
+
 
 
             {% if login_context.id and login_context.admin  %}
