--- a/jcvidb/jcvidb_app/templates/profile.html
+++ b/jcvidb/jcvidb_app/templates/profile.html
@@ -5,7 +5,7 @@
 
 <div class="col-sm-12 " >
     <div class="text-center">
-            <h1 > Details</h1>
+            <h1 > Profile Details</h1>
 
     </div>
     <hr>
@@ -56,7 +56,7 @@
             <div class="form-group row">
                 <label class="control-label col-sm-2" for="id_phone"><b>Phone:</b></label>
                 <div class="col-sm-10">
-                    <label class="col-sm-10" id="id_phone" style="border: 0px;">{{user_data.funding}}</label>
+                    <label class="col-sm-10" id="id_phone" style="border: 0px;">{{user_data.phone}}</label>
                 </div>
             </div>
 
@@ -74,6 +74,40 @@
                     <label class="col-sm-10" id="id_occupation" style="border: 0px;">{{user_data.occupation}}</label>
                 </div>
             </div>
+
+
+            <h4>Posts</h4>
+
+            <hr>
+            {% if user_data.approved_posts|length > 0  %}
+            <h5>Approved Posts</h5>
+            <hr>
+
+            <div class="scrollable-div">
+
+                <ol>
+                    {% for i in user_data.approved_posts %}
+                    <li><a href="../details/{{ i.id }}">{{i.id}}</a></li>
+                    {% endfor %}
+                </ol>
+
+
+            </div>
+            {% endif %}
+
+
+
+           {% if user_data.unapproved_posts|length > 0  %}
+            <h5>Unapproved Posts</h5>
+            <hr>
+            <div class="scrollable-div">
+                <ol>
+                    {% for i in user_data.unapproved_posts %}
+                    <li><a href="../details/{{ i.id }}">{{i.id}}</a></li>
+                    {% endfor %}
+                </ol>
+            </div>
+            {% endif %}
 
 <!--            <div class="form-group row">-->
 <!--                <label class="control-label col-sm-2" for="id_cd"><b>Joined Date:</b></label>-->
